# maze-screensaver

./: Cargo.toml  config.ini
.github/workflows/: rust.yml
src/: config.rs  grid.rs  main.rs  maze.rs
