[package]
name = "maze"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
speedy2d = { version = "1.9.5", git = "https://github.com/kirinokirino/Speedy2D", default-features = false, features = ["windowing-x11", "windowing"] }
fastrand = "1.8.0"
intmap = "2.0.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
configparser = "3.0.2"

[profile.release]
codegen-units = 1
debug = true
